yaml/hashuj2/hashuj-hashuj2-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2022-01-25T23:49:36Z"
  labels:
    app: hashuj-hashuj2-deploy
  name: hashuj-hashuj2-svc
  namespace: labproj24
  resourceVersion: "80038815"
  uid: aa5ab8eb-e62f-44cb-8ba4-9312e318c3c6
spec:
  clusterIP: 172.30.207.57
  clusterIPs:
  - 172.30.207.57
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: hashuj-hashuj2-deploy
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
